--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 /client/node_modules
+/backend/node_modules
+/backend/package-lock.json
+/client/package-lock.json
 /client/build
 
 /client/.env.local
