--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,9 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.8.3",
+    "nodemon": "^2.0.20",
     "socket.io": "^4.5.4",
+    "socket.io-client": "^4.5.4",
     "stripe": "^11.6.0",
     "validator": "^13.7.0"
   }
