--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 /client/node_modules
 /backend/node_modules
 /backend/package-lock.json
-/client/package-lock.json
+/backend/.env
 /client/build
 
 /client/.env.local
