--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
+    "build": "^0.1.4",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.0",
     "react-bootstrap": "^2.7.0",
