--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
     "build": "^0.1.4",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.0",
     "react-bootstrap": "^2.7.0",
